--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,13 +8,11 @@
   font-weight: normal;
 }
 
-/*a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}*/
+
+h1 {
+  font-weight: bold;
+}
+
 a,
 .purple {
   text-decoration: none;
