--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -44,20 +44,22 @@ a,
     padding: 0 2rem;
   }
 }
-.blob {
-  /* an oval, blurred. */
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 400px;
-  height: 500px;
-  background: linear-gradient(45deg, hsla(270, 100%, 37%, 1), hsla(270, 100%, 37%, 0));
-  border-radius: 50%;
-  filter: blur(5rem);
-  z-index: -1;
-  /* fix the issue where the cursor is not in the middle */
-  transform: translate(-50%, -50%);
-  animation: blob 20s infinite;
+@media (pointer:fine) {
+  .blob {
+    /* an oval, blurred. */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400px;
+    height: 500px;
+    background: linear-gradient(45deg, hsla(270, 100%, 37%, 1), hsla(270, 100%, 37%, 0));
+    border-radius: 50%;
+    filter: blur(5rem);
+    z-index: -1;
+    /* fix the issue where the cursor is not in the middle */
+    transform: translate(-50%, -50%);
+    animation: blob 20s infinite;
+  }
 }
 
 @keyframes blob {
